# router-firmware

./: .gitignore  Dockerfile  boot.cmd  build.py  busybox-config  dbgstub.c  kernel-config  kernel-config-new  nanopi-r4s.patch  pyproject.toml  qemu-boot.cmd  test.py
builder/: gen.py  loopmount.py  multistep.py
builder/templates/: Dockerfile.template
cross-toolchain/: Dockerfile
etc/: hosts  inittab  passwd  protocols
etc/network/: interfaces
etc/rc.d/: shutdown  startup
etc/rc.d/init.d/: bindshell
firmware/: .Dockerfile.swp  Dockerfile
firmware-builder/: Dockerfile
firmware/etc/: services
