[tool.poetry]
name = "router-firmware"
version = "0.1.0"
description = ""
authors = ["Sergey Dolgikh <sdolgikh21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "3"
fallocate = "^1.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
